# DSL_AUDIO

./: .gitignore  README.md  SKILL.md  main.py  pyproject.toml
dsl_audio/: __init__.py  cli.py  display.py  engine.py  media.py  models.py  parser.py
examples/: example.mix  test.mix
tests/: conftest.py  test_e2e.py  test_effects.py
tests/mix_files/: compress.mix  compress_hard.mix  end_boundary.mix  fade_in.mix  fade_in_out.mix  fade_out.mix  highpass.mix  lowpass.mix  mono.mix  multi_track_overlay.mix  multi_track_staggered.mix  music_bed.mix  normalize_peak.mix  normalize_rms.mix  pan_left.mix  pan_right.mix  podcast_full.mix  reverse.mix  speed_fast.mix  speed_slow.mix  strip_silence.mix  telephone.mix  trim_both.mix  trim_end.mix  trim_start.mix  voice_preset.mix  vol_baseline.mix  vol_high.mix  vol_low.mix
