[project]
name = "dsl-audio"
version = "0.1.0"
description = "Text-based podcast mixer — compile a .mix file into a single audio file"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["audio", "podcast", "mixer", "dsl", "pydub"]
dependencies = [
    "pydub>=0.25",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
dsl-audio = "dsl_audio.cli:run"

[project.urls]
Repository = "https://github.com/Jourdelune/DSL_AUDIO"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=9.0.3",
]
